<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InvoiceApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="drivers_list">
        <item>Driver1</item>
        <item>Driver2</item>
        <item>Driver3</item>
        <item>Driver4</item>
    </string-array>

    <string name="is_pickup_products">pickup_products</string>
    <string name="select_driver">Select Driver</string>
    <string name="password">Password</string>
    <string name="login_information">Login Information</string>
    <string name="submit">Submit</string>
    <string name="manager_password">Manager Password</string>
    <string name="invoice_app">Invoice App</string>
    <string name="customers">Customers</string>
    <string name="route">Route</string>
    <string name="pending_invoices">Pending Invoices</string>
    <string name="invoices">Invoices</string>
    <string name="balance_sheet">Balance Sheet</string>
    <string name="settings">Settings</string>
    
    
    <string name="sync">Sync</string>
	<string name="sync_frequency">Sync Interval</string>
      <string-array name="pref_sync_frequency_titles">
        <item>Immediately</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
</resources>