<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/home_btn_customers"
        style="@style/button_style"
        android:text="@string/customers" />

    <Button
        android:id="@+id/home_btn_route"
        style="@style/button_style"
        android:text="@string/route" />

    <Button
        android:id="@+id/home_btn_invoice"
        style="@style/button_style"
        android:text="@string/pending_invoices" />

    <Button
        android:id="@+id/home_btn_balancesheet"
        style="@style/button_style"
        android:text="@string/balance_sheet" />

    <Button
        android:id="@+id/home_btn_settings"
        style="@style/button_style"
        android:text="@string/settings" />

</LinearLayout>