<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg_color"
    android:gravity="center" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_information"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_gravity="center"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_driver"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:layout_width="wrap_content"
            android:background="@drawable/spinner_background_holo_light"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_driver"
             />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:id="@+id/tr_password"
        android:visibility="gone"
        android:paddingRight="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/edit_text_holo_light"
            android:inputType="textPassword" >
        </EditText>
    </TableRow>
    
      <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="right" >

        <Button
            android:onClick="onAuthenticating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/btn_default_holo_light"
            android:text="@string/submit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>